Added gulp and ajutes in the js task to compile the React files

--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Chat</title>
-</head>
-<body>
-	<h1>Socket.io</h1>
-	<script type="text/javascript" src="./bower_components/socket.io-client/dist/socket.io.min.js"></script>
-	<script type="text/javascript">
-
-		(function() {
-		   // your page initialization code here
-		   // the DOM will be available here
-		  var socket = io.connect();
-
-		  socket.on('connect', function(){
-
-		  	console.log('Conectou');
-		  });
-
-		})();
-		
-	</script>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>React Chat</title></head><body><div id="root"></div><script type="text/javascript" src="bundle.min.js"></script></body></html>
